01 - Added mock accounts endpoint and made token work on localhost